# scope-wallspace-captions

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
src/scope_wallspace_captions/: __init__.py  events.py  overlay.py  pipeline.py  schema.py
src/scope_wallspace_captions/text_sources/: __init__.py  buffer.py  osc_listener.py  ws_listener.py
