[project]
name = "scope-wallspace-captions"
version = "0.1.0"
description = "Live transcription-to-visuals preprocessor for WallSpace.Studio — OSC/WebSocket caption overlay with prompt forwarding, caption event system, and advanced text styling. Deployable as preprocessor (AI-integrated text) or postprocessor (clean overlay)."
requires-python = ">=3.12"
dependencies = [
    "python-osc",
    "websockets",
    "Pillow",
]

[project.entry-points."scope"]
scope_wallspace_captions = "scope_wallspace_captions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_wallspace_captions"]
